Fixed horizontal scrolling on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body::-webkit-scrollbar {
 
 body {
     cursor: default;
-    overflow-x: hidden!important;
     background-color:white!important;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
 }
